fixing z-index issue
in some browsers

--- a/public/less/resume.less
+++ b/public/less/resume.less
@@ -508,6 +508,7 @@ footer {
             background: @colorPrimary;
             color: white;
             font-family: 'FontAwesome';
+            z-index: 10;
         }
 
         span:after {
@@ -521,6 +522,7 @@ footer {
             opacity: 0;
             transform: perspective(1px) scaleX(0);
             transition: all .3s cubic-bezier(0.19, 0.02, 0, 0.99);
+            z-index: 10;
         }
 
         &:hover,
